update CinemaTheaterApplication for link creation